inserimento aggiunta lista, creazione views
